--- a/helpPage.html
+++ b/helpPage.html
@@ -56,11 +56,11 @@
                 Tabii ki yapay zekanın verdiği tüm bilgiler doğru değil ve tabii ki öğrenirken yapay zeka kullanmak öğrenmeni zorlaştırabilir. Ama bir hatayla karşılaştığında veya bir şey öğrenmek istediğinde yapay zekaya danışman senin için iyi olabilir.
                 Ek olarak öğrendiğin bilgileri pratik etmek için yine yapay zekadan proje tavsiyeleri (hesap makinesi misali) alabilirsin.
             </p>
-            <p>
+            <p style="width: 75%;">
                 Ek olarak ingilizceyi daha iyi kavramak için uygulamaları da ingilizce kullanmanı tavsiye ederim.
             </p>
-            <p>Bir programlama dili öğrenirken yapabileceğin en kötü şeylerden biri de acele etmek olacatır. Burada amacımız öğrenmek yks'den de deneyimlemiş olabilirsin. Acele ederek bir şey mantığıyla beraber öğrenilmez. Bu yüzden acele etme.</p>
-            <p>Harvard'ın cs50 dersleri ilk python tutorial'ından da zor ve uzun olabilir. Pes etme!</p>
+            <p style="width: 75%;">Bir programlama dili öğrenirken yapabileceğin en kötü şeylerden biri de acele etmek olacatır. Burada amacımız öğrenmek yks'den de deneyimlemiş olabilirsin. Acele ederek bir şey mantığıyla beraber öğrenilmez. Bu yüzden acele etme.</p>
+            <p style="width: 75%;">Harvard'ın cs50 dersleri ilk python tutorial'ından da zor ve uzun olabilir. Pes etme!</p>
         </div>
 
         <div class="center-div" style="margin-top: 50px; margin-bottom: 25px;">
