Added small paragraph

--- a/helpPage.html
+++ b/helpPage.html
@@ -61,6 +61,7 @@
             </p>
             <p style="width: 75%;">Bir programlama dili öğrenirken yapabileceğin en kötü şeylerden biri de acele etmek olacatır. Burada amacımız öğrenmek yks'den de deneyimlemiş olabilirsin. Acele ederek bir şey mantığıyla beraber öğrenilmez. Bu yüzden acele etme.</p>
             <p style="width: 75%;">Harvard'ın cs50 dersleri ilk python tutorial'ından da zor ve uzun olabilir. Pes etme!</p>
+            <p style="width: 75%;">Git ve github'ı kullanmayı öğrenirsen ve kullandığın yazılım diline göre de bir IDE (mesela python için PyCharm misali) kullanmayı öğrenirsen ileriki hayatına katkıda bulunursun. Çünkü gelecekteki işinde bunları kullanacaksın.</p>
         </div>
 
         <div class="center-div" style="margin-top: 50px; margin-bottom: 25px;">
