--- a/helpPage.html
+++ b/helpPage.html
@@ -10,6 +10,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
+        <div class="background-div">
+        </div>
         
         <!--Best Youtube Video To Learn Python-->
         <div class="specialize-div">
@@ -80,7 +82,7 @@
                     <td><iframe width="560" height="315" src="https://www.youtube.com/embed/ECnVlCmOYvg?si=29fEU4uo5gWWUiK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
-                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/AYwyBrr8siU?si=qaYOXa-A8Uq5k9OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/HHD9EyL4XG8?si=rHZZ-BOmCh8uDSvp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                     <td><iframe width="560" height="315" src="https://www.youtube.com/embed/psqBFjMAPMM?si=CQhO6qkGOzf0tOk6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
@@ -90,6 +92,10 @@
                 <tr>
                     <td><iframe width="560" height="315" src="https://www.youtube.com/embed/VNZ2v9i2xa8?si=cLoPgCAW3raRbkNi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                     <td><iframe width="560" height="315" src="https://www.youtube.com/embed/RiJGyv9XScE?si=VBw_yGxp5hVdjEB-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+                </tr>
+                <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/AYwyBrr8siU?si=qaYOXa-A8Uq5k9OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td></td>
