--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h1 style="padding: 5vh;">👋 Welcome, Future Programmer</h1>
             <h2 style="font-style: italic;">Why I Created This Website</h2>
             <p>This website created to show beginners a "roadmap" and inform them about some good content.</p>
+            <p style="margin-bottom: 20px;">Şaka şaka 'Müzeyyen' için yaptım.</p>
             <button id="get_in_button"><a href="helpPage.html" target="_self">See Some Helpful Things From 'iyiinsan5555'</a></button>
         </div>
         <button id="clock" title="Time Passes Before You Realize" >Clock</button>
