--- a/helpPage.html
+++ b/helpPage.html
@@ -95,7 +95,7 @@
                 </tr>
                 <tr>
                     <td><iframe width="560" height="315" src="https://www.youtube.com/embed/AYwyBrr8siU?si=qaYOXa-A8Uq5k9OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
-                    <td></td>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/S9W9SkgLgkg?si=zDo7cSq2wHvBTvml" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                 </tr>
                 <tr>
                     <td></td>
