--- a/helpPage.html
+++ b/helpPage.html
@@ -70,6 +70,7 @@
             <h3>Tavsiye Ettiğim (Türkçe) Youtube Kanalları</h3>
             <a href="https://www.youtube.com/@Sadievrenseker_BK" style="margin-top: 25px;">BilgisayarKavramlari</a>
             <a href="https://www.youtube.com/c/Yaz%C4%B1l%C4%B1m%C4%B0lkAd%C4%B1m" style="margin-top: 25px; margin-bottom: 25px;">Yazılım İlk Adım</a>
+            <a href="https://www.youtube.com/@Buders" style="margin-top: 25px; margin-bottom: 25px;">BUders Boğaziçiliden Özel Ders</a>
             <p>Bu iki kanal sana ve eğitimine katkı sağlayacak bir çok video paylaştı. Boş vakitlerinde onlardan da bilgi almanı tavsiye ederim.</p>
         </div>
 
